b=854539 - Implement AllocateAndGetNewBuffer for SharedPlanarYCbCrImage. r=nical